--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <modules>
         <module>chapter_001</module>
 		<module>chapter_002</module>
-		<module>chapter_003</module>
+		<module>chapter003</module>
     </modules>
 
     <dependencies>
@@ -37,6 +37,25 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.7.9</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
