--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>chapter_001</module>
 		<module>chapter_002</module>
 		<module>chapter003</module>
+		<module>chapter_004</module>
     </modules>
 
     <dependencies>
@@ -32,6 +33,12 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.1-901-1.jdbc4</version>
         </dependency>
     </dependencies>
 
